fix overlap issue with typeahead

--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -72,6 +72,7 @@
 .filter-toggle {
   &.filter-drop {
     border: 1px solid $gray-400;
+    transform: unset;
 
     svg {
       color: $gray-600;
